--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,14 @@ pandas
 matplotlib
 torch
 torchvision
-numpy
+numpy<2
 Pillow
 openai
 groq
 langchain
 langchain_groq
 python-dotenv
+transformers
+accelerate
+huggingface_hub
+langchain-ollama
